<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="seoul.iot.biketrainner.SignInActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/velo_icon"
            android:layout_width="89.9dp"
            android:layout_height="18.8dp"
            android:background="@color/colorRed"
            android:text="VELO"/>

        <TextView
            android:id="@+id/velo_subtitle"
            android:layout_width="84.8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:background="@color/colorRed"
            android:text="CYCLE ASSISTANT"/>
    </LinearLayout>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18.8dp"
            android:layout_marginRight="18.8dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27.5dp"
                    android:background="@color/colorRed"
                    android:text="USERNAME" />

                <TextView
                    android:id="@+id/id_icon"
                    android:layout_width="14.3dp"
                    android:layout_height="14.3dp"
                    android:layout_marginTop="6.8dp"
                    android:layout_marginLeft="1.3dp"
                    android:background="@color/colorRed"
                    android:text="O"
                    android:textAlignment="center"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorWhite"
                        android:maxLines="1"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="@color/colorRed"/>

                </android.support.design.widget.TextInputLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/pwd_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="27.5dp"
                    android:background="@color/colorRed"
                    android:text="USERNAME" />

                <TextView
                    android:id="@+id/pwd_icon"
                    android:layout_width="14.3dp"
                    android:layout_height="14.3dp"
                    android:layout_marginTop="6.8dp"
                    android:layout_marginLeft="1.3dp"
                    android:background="@color/colorRed"
                    android:text="O"
                    android:textAlignment="center" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.3dp"
                        android:background="@color/colorRed"/>

                </android.support.design.widget.TextInputLayout>
            </FrameLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DON'T HAVE AN ACCOUNT?"/>

                <TextView
                    android:id="@+id/si_sign_up_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="SIGN UP"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
